<resources>
    <string name="app_name">My Music</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="mymusic">My Music</string>
    <string name="website">www.my_music.com</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="recents">Recents</string>
    <string name="playlists">Playlists</string>
    <string name="genre">Genre</string>
    <string name="tracks">Tracks</string>
    <string name="radio">Radio</string>
    <string name="trending">Trending</string>
    <string name="top">Weekly Top 20</string>
    <string name="newrelease">New Releases</string>
    <string name="classics">Classics</string>
    <string name="track_1">Track-1</string>
    <string name="track_2">Track-2</string>
    <string name="track_3">Track-3</string>
    <string name="track_4">Track-4</string>
    <string name="track_5">Track-5</string>
    <string name="track_6">Track-6</string>
    <string name="track_7">Track-7</string>
    <string name="track_8">Track-8</string>
    <string name="track_9">Track-9</string>
    <string name="track_10">Track-10</string>
    <string name="artist">Artist Name</string>
    <string name="playlist_1">PlayList-1</string>
    <string name="playlist_2">PlayList-2</string>
    <string name="playlist_3">PlayList-3</string>
    <string name="playlist_4">PlayList-4</string>
    <string name="playlist_5">PlayList-5</string>
    <string name="playlist_6">PlayList-6</string>
    <string name="love">Love</string>
    <string name="travel">Travel</string>
    <string name="party">Party</string>
    <string name="wedding">Wedding</string>
    <string name="dance">Dance</string>
    <string name="cheerful">Cheerful</string>
    <string name="title_activity_details">Tracks</string>
    <string name="trackname">Track Name</string>
    <string name="homedetails">The App uses a sliding panel menu using navigation Drawer in which we combine Drawerlayout and Naviagtionview.On selecting the desired option desired fragment is opened.\nHome Screen:\nIt has a search section,where the user searches for Artists or Songs from the SoundCloud.The rest of the screen has different music styles categories.Each category has a horizontal scroll view of albums.\nOn clicking on any of the albums an explicit intent is called to the Tracks screen.</string>
    <string name="recentsdetails">Recents:\nA custom Adapter with a new class which contains an imageview and 2 textviews will be used for listview of songs.On the bottom of the page there is a draggable sliding up panel to another view-Now Playing screen.There are three buttons for play,next,previous if the view is collapsed.\nImplemented library: Android sliding Up panel.\nIt will be used Exoplayer library for implementing the Mediaplayer.</string>
    <string name="playlistdetails">PlayLists:\nIt has a gridview with a custom adapter with a new class which contains an imageview and a textview.\nClick on any of the following playlists.Each of them uses Explicit intent to the next Activity-Tracks screen</string>
    <string name="genredetails">Genre:\nIt has a gridview with a custom adapter with a new class which contains 2 imageviews and a textview.\nClick on any of the following playlists.Each of them uses Explicit intent to the next Activity-Tracks screen</string>
    <string name="radiodetails">Radio:\nIt will contain a media player that streams music from the cloud.Library for streaming music: RadioPlayerService.\nBelow you will see an image of a radio.At the bottom of the screen it has 3 buttons for play,next and previous</string>
    <string name="playingdetails">Now Playing:\nIt has an image of the Album and a seekbar and 3 buttons for play,next,previous.\nIt will be used ExoPlayer Library for implementing the MediaPlayer.</string>
    <string name="tracksdetails">Tracks:\nA custom Adapter with a new class which contains an imageview and 2 textviews will be used for listview of songs.On the bottom of the page there is a draggable sliding up panel to another view-Now Playing screen.There are three buttons for play,next,previous if the view is collapsed.\nImplemented library: Android sliding Up panel.\nIt will be used Exoplayer library for implementing the Mediaplayer.</string>
</resources>
