<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/recents"
            android:icon="@drawable/recents"
            android:title="@string/recents" />
        <item
            android:id="@+id/playlists"
            android:icon="@drawable/playlist"
            android:title="@string/playlists" />
        <item
            android:id="@+id/tracks"
            android:icon="@drawable/tracks"
            android:title="@string/tracks" />
        <item
            android:id="@+id/genre"
            android:icon="@drawable/genre"
            android:title="@string/genre" />
        <item
            android:id="@+id/radio"
            android:icon="@drawable/radio"
            android:title="@string/radio" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
